<?xml version="1.0"?>
<package>
  <name>rosbeam</name>
  <version>0.1.0</version>
  <description>ROS driver for Beam</description>
  <maintainer email="lingzhu@lingzhuxiang.com">Lingzhu Xiang</maintainer>
  <license>MIT</license>

  <url type="bugtracker">https://github.com/xlz/rosbeam/issues</url>
  <url type="repository">https://github.com/xlz/rosbeam</url>
  <author>Lingzhu Xiang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2_msgs</run_depend>
</package>
